# ut_trust_open

./: .gitignore  .python-version  README.md  pyproject.toml
src/: llm_output.py
template/dict/: v1.json
template/ontology/jsonld/: ontology-allinone-god.jsonld  ontology-base.jsonld  ontology-currency-enum.jsonld  ontology-currency-simple-text.jsonld  ontology-rule-SHACL.jsonld  ontology-rule-llms-taste.jsonld  ontology-rule-semantic-web-taste.jsonld  ontology-rule-text.jsonld  ontology-type-property.jsonld  ontology-unit-price.jsonld
template/ontology/nl/: nl.nl  nl_rule.nl
template/ontology_examples/jsonld/: ontology-allinone-god.txt  ontology-base.txt  ontology-currency-enum.txt  ontology-currency-simple-text.txt  ontology-rule-SHACL.txt  ontology-rule-llms-taste.txt  ontology-rule-semantic-web-taste.txt  ontology-rule-text.txt  ontology-type-property.txt  ontology-unit-price.txt
template/ontology_examples/nl/: nl.txt
template/rule/jsonld/: ontology-allinone-god.py  ontology-currency-enum.py  ontology-currency-simple-text.py  ontology-rule-llms-taste.py  ontology-unit-price.py
template/rule/nl/: nl_rule.py
