[project]
name = "with-trust"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "dotenv>=0.9.9",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "rdflib>=7.1.4",
    "requests>=2.32.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
